# 🌺💜 Violet: Extended C++ standard library
# Copyright (c) 2025-2026 Noelware, LLC. <team@noelware.org>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//buildsystem/bazel:cc.bzl", "cc_library", "cc_test")

cc_library(
    name = "macros",
    hdrs = ["//include/violet/Language:Macros.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "policy_checks",
    hdrs = ["//include/violet/Language:Policy.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "violet",
    hdrs = ["//include/violet:Violet.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":macros",
        ":policy_checks",
        "@absl//absl/numeric:int128",
    ],
)

cc_library(
    name = "print",
    hdrs = ["//include/violet:Print.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":violet",
        "//violet/io:descriptor",
    ],
)

cc_library(
    name = "iterator",
    hdrs = ["//include/violet:Iterator.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//violet",
        "//violet/container",
    ],
)

cc_test(
    name = "iterator_test",
    srcs = ["//tests:Iterator.test.cc"],
    deps = [":iterator"],
)

# A "uber" library that contains all base Noelware.Violet libraries and code
cc_library(
    name = "base_uber",
    srcs = ["//:dummy.cc"],
    linkstatic = 0,
    visibility = ["//visibility:public"],
    deps = [
        ":macros",
        ":violet",
        "//violet/container",
        "//violet/iterator:enumerate",
        "//violet/iterator:filter",
        "//violet/iterator:map",
        "//violet/iterator:peekable",
        "//violet/iterator:skip",
        "//violet/iterator:take",
        "//violet/support:bitflags",
        "//violet/support:demangle",
        "//violet/support:terminal",
        "//violet/system",
        "//violet/system:ci",
        "//violet/system:which",
    ],
)
