# 🌺💜 Violet: Extended C++ standard library
# Copyright (c) 2025-2026 Noelware, LLC. <team@noelware.org>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//buildsystem/bazel:cc.bzl", "violet_cc_library", "violet_cc_test")

package(
    default_visibility = ["//visibility:public"],
)

violet_cc_library(
    name = "macros",
    hdrs = ["//include/violet/Language:Macros.h"],
)

violet_cc_library(
    name = "policy_checks",
    hdrs = ["//include/violet/Language:Policy.h"],
)

violet_cc_library(
    name = "assert",
    hdrs = ["//include/violet/Language:Assert.h"],
    deps = [
        ":macros",
        ":policy_checks",
        ":print",
    ],
)

violet_cc_library(
    name = "print",
    hdrs = ["//include/violet:Print.h"],
    deps = [
        ":macros",
        ":policy_checks",
    ],
)

violet_cc_library(
    name = "violet",
    hdrs = ["//include/violet:Violet.h"],
    deps = [
        ":assert",
        ":macros",
        ":policy_checks",
    ],
)

violet_cc_library(
    name = "iterator",
    hdrs = ["//include/violet:Iterator.h"],
    deps = [
        "//violet",
        "//violet/container",
    ],
)

violet_cc_test(
    name = "iterator_test",
    srcs = ["//tests:Iterator.test.cc"],
    deps = [":iterator"],
)

violet_cc_library(
    name = "anyhow",
    srcs = ["//src:anyhow.cc"],
    hdrs = ["//include/violet:anyhow.h"],
    deps = [
        ":iterator",
        ":print",
        ":violet",
        "//violet/container",
        "//violet/support:demangle",
        "//violet/support:terminal",
    ],
)

violet_cc_test(
    name = "anyhow_test",
    srcs = ["//tests:anyhow.test.cc"],
    deps = [
        ":anyhow",
        "//violet/iterator:map",
        "//violet/testing:capture_stream",
    ],
)

violet_cc_library(
    name = "strings",
    srcs = ["//src:strings.cc"],
    hdrs = ["//include/violet:Strings.h"],
    deps = [
        ":iterator",
        ":violet",
        "//violet/container:optional",
    ],
)

violet_cc_test(
    name = "strings_test",
    srcs = ["//tests:strings.test.cc"],
    deps = [":strings"],
)

violet_cc_library(
    name = "runtime_info",
    hdrs = ["//include/violet/Runtime:Info.h"],
    deps = [
        ":macros",
        "//violet/experimental:smol_string",
    ],
)

violet_cc_library(
    name = "source_location",
    hdrs = ["//include/violet:SourceLocation.h"],
    deps = [
        ":macros",
        ":policy_checks",
    ],
)

violet_cc_library(
    name = "defer",
    hdrs = ["//include/violet:Defer.h"],
    deps = [":violet"],
)
